--- a/TF2 Rich Presence/locales/Spanish.json
+++ b/TF2 Rich Presence/locales/Spanish.json
@@ -1,17 +1,17 @@
 {
     "name_localized": "Español",
     "code": "es",
-    "credits": "",
-    "notes": "",
+    "credits": "Erick4kun",
+    "notes": "Traducción al español",
     "4021625669": "(Si tiene más de una versión desactualizada, es posible que haya habido más cambios y correcciones que ésta.)",
     "3336272700": "1. Haz clic con el botón derecho del ratón en Team Fortress 2 en tu biblioteca de Steam",
-    "3034581868": "2. Propiedades abiertas (muy abajo)",
+    "3034581868": "2. Click en propiedades (hasta abajo)",
     "2781874761": "3. Haga clic en \"Establecer opciones de lanzamiento...\"",
     "2276072520": "4. Añadir {0}",
     "5268450630": "5. Aceptar y Cerrar",
     "5334641500": "6. Reiniciar TF2",
     "9207858800": "Acerca de",
-    "1524762595": "Acerca de TF2 Presencia Rica",
+    "1524762595": "Acerca de TF2 Rich Presence",
     "2267553510": "Avanzado",
     "3295159910": "Todos los errores",
     "2212631709": "También puedes iniciar el juego a través del botón \"Launch TF2\".",
@@ -27,7 +27,7 @@
     "9210445720": "Comprobar las actualizaciones",
     "9227519100": "Clase",
     "3231589050": "Clase: {0}",
-    "1351878611": "Cerrar sin grabar",
+    "1351878611": "Cerrar sin guardar",
     "5860897400": "Punto de Control",
     "1795231764": "No pude encontrar una instalación de Team Fortress 2.",
     "3315339845": "No se pudieron cargar las configuraciones, volviendo a los valores por defecto.{0}",
@@ -36,7 +36,7 @@
     "2368506900": "La configuración actual ya está predeterminada.",
     "9044016800": "Depurar",
     "2898597302": "Retraso entre actualizaciones cuando TF2 y Discord no están funcionando: ",
-    "8054718100": "Retraso entre refrescos, en segundos: ",
+    "8054718100": "Retraso entre actualizaciones, en segundos: ",
     "1775377300": "Demoman",
     "2314739660": "Engineer",
     "9725594700": "Error",
@@ -53,7 +53,7 @@
     "4883034200": "Tiempo de espera de la conexión a Internet (para la actualización y la consulta del servidor): ",
     "3018856828": "¡Hoy es el {0}{1} cumpleaños de TF2 Rich Presence! (Sí, el 1 de abril, en serio)",
     "9535539200": "Conteo de muertes",
-    "3291882260": "Mata: {0}",
+    "3291882260": "Asesinatos: {0}",
     "7819769690": "Rey de la Colina",
     "3469484790": "Idioma: ",
     "3298435280": "Lanzar el TF2",
@@ -84,11 +84,11 @@
     "1843534830": "Carga Útil",
     "4892929020": "Carrera de Carga Útil",
     "1098909474": "Destrucción de Jugadores",
-    "5008928550": "El recuento de los jugadores",
+    "5008928550": "Recuento de jugadores",
     "8385345870": "Jugadores: {0}/{1}",
     "6724036300": "Pyro",
     "9462759140": "En cola para Casual",
-    "1589381242": "En cola para el Competitivo",
+    "1589381242": "En cola para Competitivo",
     "2032797863": "En cola para MvM (Boot Camp)",
     "1743194081": "En cola para MvM (Mann Up)",
     "2125859177": "Cola para el partido de una fiesta",
@@ -110,10 +110,10 @@
     "1851399230": "Soldier",
     "8498724220": "Entrega Especial",
     "3912530900": "Spy",
-    "7967881680": "TF2 Presencia Rica",
-    "1465190241": "TF2 Presencia Rica ({0})",
-    "3376810928": "TF2 Presencia Rica ({0}) de Kataiser",
-    "2858683122": "Configuración de TF2 Presencia Rica ({0})",
+    "7967881680": "TF2 Rich Presence",
+    "1465190241": "TF2 Rich Presence ({0})",
+    "3376810928": "TF2 Rich Presence ({0}) de Kataiser",
+    "2858683122": "Configuración de TF2 Rich Presence ({0})",
     "7301379380": "Team Fortress 2",
     "1270024083": "Control Territorial",
     "1479218207": "Esta versión ({0}) está desactualizada (la última versión es {1}).",
@@ -123,13 +123,13 @@
     "2400591970": "Entrenamiento",
     "1589315666": "Recortar/limpiar console.log",
     "8988278560": "Modo de juego desconocido",
-    "1257244521": "Неизвестное имя сервера",
+    "1257244521": "Nombre de servidor desconocido",
     "2651621140": "Utilizar las imágenes clásicas del modo de juego en la interfaz gráfica de usuario",
     "1011879672": "¿Desea abrir la página de descarga?",
     "3846993800": "Sí",
     "1638865032": "Su instalación de TF2 aún no parece estar configurada correctamente. Para arreglar:",
     "3929549250": "no seleccionado",
-    "1900873894": "{0} - TF2 Presencia Rica {1}",
+    "1900873894": "{0} - TF2 Rich Presence {1}",
     "1266157337": "{0} - Esperando a {1}",
     "5934295940": "{0} - {1} ({2})",
     "6943552060": "{0} - {1} en {2}",
