--- a/TF2 Rich Presence/locales/Spanish.json
+++ b/TF2 Rich Presence/locales/Spanish.json
@@ -11,7 +11,8 @@
     "5268450630": "5. Aceptar y Cerrar",
     "5334641500": "6. Reiniciar TF2",
     "9207858800": "Acerca de",
-    "1524762595": "Acerca de TF2 Presencia Rica",
+    "1524762595": "Acerca de Team fortress 2 rich prescense",
+    "4251331620": "Logros",
     "2267553510": "Avanzado",
     "3295159910": "Todos los errores",
     "2212631709": "También puedes iniciar el juego a través del botón \"Launch TF2\".",
@@ -27,17 +28,20 @@
     "9210445720": "Comprobar las actualizaciones",
     "9227519100": "Clase",
     "3231589050": "Clase: {0}",
-    "1351878611": "Cerrar sin grabar",
+    "1351878611": "Cerrar sin guardar",
     "5860897400": "Punto de Control",
     "1795231764": "No pude encontrar una instalación de Team Fortress 2.",
     "3315339845": "No se pudieron cargar las configuraciones, volviendo a los valores por defecto.{0}",
     "1791761380": "Accidentes",
     "2340298680": "Crítico",
     "2368506900": "La configuración actual ya está predeterminada.",
+    "3535021960": "Partido a Muerte",
+    "2308841560": "Carrera de Muerte",
     "9044016800": "Depurar",
     "2898597302": "Retraso entre actualizaciones cuando TF2 y Discord no están funcionando: ",
     "8054718100": "Retraso entre refrescos, en segundos: ",
     "1775377300": "Demoman",
+    "2843615990": "Balón prisionero",
     "2314739660": "Engineer",
     "9725594700": "Error",
     "6330818700": "Salir",
@@ -48,22 +52,26 @@
     "6049012200": "Ayuda",
     "1458447686": "¡Hola, parece que Kataiser, el desarrollador de TF2 Rich Presence, está en tu juego!\nSalúdame si quieres :)",
     "1528106792": "Ocultar tipo de juego (Casual, Comp, MvM) en cola para",
-    "2085363200": "En los menús",
+    "2085363200": "En el menu principal",
     "6166977300": "Información",
     "4883034200": "Tiempo de espera de la conexión a Internet (para la actualización y la consulta del servidor): ",
     "3018856828": "¡Hoy es el {0}{1} cumpleaños de TF2 Rich Presence! (Sí, el 1 de abril, en serio)",
+    "5367410860": "Escapada de la Cárcel",
+    "1873026190": "Salto",
     "9535539200": "Conteo de muertes",
     "3291882260": "Mata: {0}",
     "7819769690": "Rey de la Colina",
     "3469484790": "Idioma: ",
-    "3298435280": "Lanzar el TF2",
-    "4940769640": "Lanzamiento...",
+    "3298435280": "Lanzar TF2",
+    "4940769640": "Lanzando...",
     "2083457385": "Registrar la frecuencia de los informes: ",
+    "1309414660": "MGE Mod",
     "6049011800": "Principal",
     "7761442790": "Mann vs. Máquina",
     "3004835120": "Mannpower",
     "1954945610": "Mapa: {0}",
     "9351347340": "Mapa: {0} (alojamiento)",
+    "3316786350": "Mario Kart",
     "3295840550": "Máximo kilobytes de console.log para escanear: ",
     "7065449230": "Nivel máximo de registro: ",
     "9194749100": "Medic",
@@ -71,21 +79,23 @@
     "9627289700": "Nunca",
     "1762937400": "No",
     "3931515170": "No hay modo de juego",
-    "3447858830": "No en cola",
+    "3447858830": "En reposo",
     "2293570909": "Ocasionalmente limita el tamaño de console.log y elimina las líneas vacías y los errores comunes",
     "3578294000": "Apagado",
     "8197257790": "Abrir la página de Github",
     "6519534990": "Abrir el registro de cambios",
     "8559017180": "Abrir console.log",
     "4845743580": "Licencia abierta",
-    "4069140810": "Abrir el Léame",
+    "4069140810": "Abrir Léame",
     "1179387735": "Abrir el directorio de guardado",
+    "1359878050": "Naranja",
     "2266242310": "PASS Time",
     "1843534830": "Carga Útil",
     "4892929020": "Carrera de Carga Útil",
     "1098909474": "Destrucción de Jugadores",
-    "5008928550": "El recuento de los jugadores",
+    "5008928550": "recuento de los jugadores",
     "8385345870": "Jugadores: {0}/{1}",
+    "2768904650": "Caza de Objetos",
     "6724036300": "Pyro",
     "9462759140": "En cola para Casual",
     "1589381242": "En cola para el Competitivo",
@@ -104,12 +114,13 @@
     "6239040250": "Guardar y cerrar",
     "9823899100": "Scout",
     "3509849080": "Tipo de imagen pequeña de la clase seleccionada: ",
-    "4263127610": "Nombre del servidor",
     "2639727217": "Límite de la tasa de consultas del servidor: ",
+    "1833049100": "Esbelto",
     "1393301620": "Sniper",
     "1851399230": "Soldier",
     "8498724220": "Entrega Especial",
     "3912530900": "Spy",
+    "1904483510": "Surfeo",
     "7967881680": "TF2 Presencia Rica",
     "1465190241": "TF2 Presencia Rica ({0})",
     "3376810928": "TF2 Presencia Rica ({0}) de Kataiser",
@@ -118,23 +129,24 @@
     "1270024083": "Control Territorial",
     "1479218207": "Esta versión ({0}) está desactualizada (la última versión es {1}).",
     "3915786030": "Tiempo en el mapa",
-    "7863023170": "El tiempo en el mapa: {0}",
+    "7863023170": "Tiempo en el mapa: {0}",
     "3298435420": "Línea superior: ",
+    "1836325860": "Comercial",
     "2400591970": "Entrenamiento",
     "1589315666": "Recortar/limpiar console.log",
     "8988278560": "Modo de juego desconocido",
-    "1257244521": "Неизвестное имя сервера",
     "2651621140": "Utilizar las imágenes clásicas del modo de juego en la interfaz gráfica de usuario",
+    "1096615616": "Versus Saxton Hale",
     "1011879672": "¿Desea abrir la página de descarga?",
     "3846993800": "Sí",
     "1638865032": "Su instalación de TF2 aún no parece estar configurada correctamente. Para arreglar:",
     "3929549250": "no seleccionado",
-    "1900873894": "{0} - TF2 Presencia Rica {1}",
+    "1900873894": "{0}",
     "1266157337": "{0} - Esperando a {1}",
     "5934295940": "{0} - {1} ({2})",
     "6943552060": "{0} - {1} en {2}",
     "6446134190": "{0} registro de cambios:",
     "4037028230": "{0} transcurrido",
-    "9156706070": "{0} no está funcionando",
+    "9156706070": "{0} no se esta ejecutando",
     "1562970061": "{0} actualización disponible  "
 }
