--- a/TF2 Rich Presence/locales/Spanish.json
+++ b/TF2 Rich Presence/locales/Spanish.json
@@ -3,10 +3,10 @@
     "code": "es",
     "credits": "",
     "notes": "",
-    "4021625669": "(Si tiene más de una versión desactualizada, es posible que haya habido más cambios y correcciones que ésta.)",
+    "4021625669": "(Si tiene más de una versión desactualizada, es posible que haya habido más cambios y correcciones mas recientes que ésta.)",
     "3336272700": "1. Haz clic con el botón derecho del ratón en Team Fortress 2 en tu biblioteca de Steam",
     "3034581868": "2. Propiedades abiertas (muy abajo)",
-    "2781874761": "3. Haga clic en \"Establecer opciones de lanzamiento...\"",
+    "2781874761": "3. Haga clic en \"Establecer opciones de ejecucion...\"",
     "2276072520": "4. Añadir {0}",
     "5268450630": "5. Aceptar y Cerrar",
     "5334641500": "6. Reiniciar TF2",
@@ -50,16 +50,16 @@
     "8092399540": "¡Feliz Año Nuevo!",
     "9286502200": "Heavy",
     "6049012200": "Ayuda",
-    "1458447686": "¡Hola, parece que Kataiser, el desarrollador de TF2 Rich Presence, está en tu juego!\nSalúdame si quieres :)",
+    "1458447686": "¡Hola, parece que Kataiser, el desarrollador de TF2 Rich Presence, está en tu partidao!\nSalúdame si quieres :)",
     "1528106792": "Ocultar tipo de juego (Casual, Comp, MvM) en cola para",
     "2085363200": "En el menu principal",
     "6166977300": "Información",
     "4883034200": "Tiempo de espera de la conexión a Internet (para la actualización y la consulta del servidor): ",
     "3018856828": "¡Hoy es el {0}{1} cumpleaños de TF2 Rich Presence! (Sí, el 1 de abril, en serio)",
-    "5367410860": "Escapada de la Cárcel",
+    "5367410860": "Jailbreak",
     "1873026190": "Salto",
     "9535539200": "Conteo de muertes",
-    "3291882260": "Mata: {0}",
+    "3291882260": "Muertes: {0}",
     "7819769690": "Rey de la Colina",
     "3469484790": "Idioma: ",
     "3298435280": "Lanzar TF2",
@@ -67,7 +67,7 @@
     "2083457385": "Registrar la frecuencia de los informes: ",
     "1309414660": "MGE Mod",
     "6049011800": "Principal",
-    "7761442790": "Mann vs. Máquina",
+    "7761442790": "Mann vs. Machine",
     "3004835120": "Mannpower",
     "1954945610": "Mapa: {0}",
     "9351347340": "Mapa: {0} (alojamiento)",
@@ -98,10 +98,10 @@
     "2768904650": "Caza de Objetos",
     "6724036300": "Pyro",
     "9462759140": "En cola para Casual",
-    "1589381242": "En cola para el Competitivo",
+    "1589381242": "En cola para Competitivo",
     "2032797863": "En cola para MvM (Boot Camp)",
     "1743194081": "En cola para MvM (Mann Up)",
-    "2125859177": "Cola para el partido de una fiesta",
+    "2125859177": "Cola para match party",
     "3679915290": "Recordar la posición anterior de la ventana",
     "8718925310": "Informar de un error/problema",
     "4273081733": "¿Restaurar 1 configuración cambiada a la predeterminada?",
