--- a/TF2 Rich Presence/locales/Spanish.json
+++ b/TF2 Rich Presence/locales/Spanish.json
@@ -1,8 +1,8 @@
 {
     "name_localized": "Español",
     "code": "es",
-    "credits": "",
-    "notes": "",
+    "credits": "Erickonlive",
+    "notes": "Evidentemente esta versión no está traducida con Google.",
     "4021625669": "(Si tiene más de una versión desactualizada, es posible que haya habido más cambios y correcciones mas recientes que ésta.)",
     "3336272700": "1. Haz clic con el botón derecho del ratón en Team Fortress 2 en tu biblioteca de Steam",
     "3034581868": "2. Propiedades abiertas (muy abajo)",
